Several changes: - Fixed some layout float-clearing issues - Added some whitespace to top of content

--- a/client/custom.bootstrap.import.less
+++ b/client/custom.bootstrap.import.less
@@ -950,6 +950,12 @@ pre {
   font-size: ( @font-size-base - (1 / @font-size-root) );
 }
 
+.sidebar legend {
+  font-family: @font-family-serif;
+  font-size: 1.0 + @font-unit; 
+  color: #727272;
+}
+
 .form-control-feedback {
   width: calc(@input-height-base ~" + 2px");
   height: calc(@input-height-base ~" + 2px");
